add tomato pie recipe image

--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Tomato Pie</h1>
+    <img src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg" alt="Image of a tomato pie">
 </body>
 </html>
