--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -8,6 +8,6 @@
 <body>
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Tomato Pie</h1>
-    <img src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg" alt="Image of a tomato pie">
+    <img src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg" width="500" alt="Image of a tomato pie">
 </body>
 </html>
