add tomato pie recipe description

--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -9,5 +9,8 @@
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Tomato Pie</h1>
     <img src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg" width="500" alt="Image of a tomato pie">
+    <h2>Description</h2>
+    <p>Celebrate summer with this homemade tomato pie. It's the perfect way to use up fresh seasonal produce!</p>
+    <p>If you're not familiar with tomatoes in pie, you've been missing out. Imagine in your head a savory tomato tart. Tomato pie come to us from the south, and just like the many different parts of this region, there are many different ways to prepare a tomato pie. This recipe is a crowd-pleaser though, and it will cause your friends and family to ask for your secret.</p>
 </body>
 </html>
