--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomato Pie Recipe</title>
-</head>
-<body>
+  </head>
+  <body>
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Tomato Pie</h1>
-    <img src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg" width="500" alt="Image of a tomato pie">
+    <img
+      src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg"
+      width="500"
+      alt="Image of a tomato pie"
+    />
     <h2>Description</h2>
-    <p>Celebrate summer with this homemade tomato pie. It's the perfect way to use up fresh seasonal produce!</p>
-    <p>If you're not familiar with tomatoes in pie, you've been missing out. Imagine in your head a savory tomato tart. Tomato pie come to us from the south, and just like the many different parts of this region, there are many different ways to prepare a tomato pie. This recipe is a crowd-pleaser though, and it will cause your friends and family to ask for your secret.</p>
-</body>
+    <p>
+      Celebrate summer with this homemade tomato pie. It's the perfect way to
+      use up fresh seasonal produce!
+    </p>
+    <p>
+      If you're not familiar with tomatoes in pie, you've been missing out.
+      Imagine in your head a savory tomato tart. Tomato pie come to us from the
+      south, and just like the many different parts of this region, there are
+      many different ways to prepare a tomato pie. This recipe is a
+      crowd-pleaser though, and it will cause your friends and family to ask for
+      your secret.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 (9-inch) deep dish pie crust</li>
+      <li>4 large tomatoes, peeled and sliced</li>
+      <li>½ pound bacon - cooked, drained, and chopped</li>
+      <li>3 green onions, thinly sliced</li>
+      <li>½ cup chopped fresh basil</li>
+      <li>1 teaspoon dried oregano</li>
+      <li>½ teaspoon garlic powder</li>
+      <li>½ teaspoon crushed red pepper</li>
+      <li>2 cups shredded Cheddar cheese</li>
+      <li>¼ cup mayonnaise</li>
+    </ul>
+  </body>
 </html>
