adjust tomato pie page all headings font size

--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <a href="../index.html" rel="noreferrer">Home</a>
-    <h1>Tomato Pie</h1>
+    <h1 style="font-size: 50px">Tomato Pie</h1>
     <img
       src="https://images.pexels.com/photos/5419180/pexels-photo-5419180.jpeg"
       width="500"
       alt="Image of a tomato pie"
     />
-    <h2>Description</h2>
+    <h2 style="font-size: 35px">Description</h2>
     <p>
       Celebrate summer with this homemade tomato pie. It's the perfect way to
       use up fresh seasonal produce!
@@ -27,7 +27,7 @@
       your secret.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 style="font-size: 35px">Ingredients</h2>
     <ul>
       <li>1 (9-inch) deep dish pie crust</li>
       <li>4 large tomatoes, peeled and sliced</li>
@@ -41,7 +41,7 @@
       <li>¼ cup mayonnaise</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 style="font-size: 35px">Directions</h2>
     <ol>
       <li>
         Gather all ingredients. Preheat the oven to 375 degrees F (190 degrees
