adjust tomato pie page body font size

--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomato Pie Recipe</title>
   </head>
-  <body>
+  <body style="font-size: larger">
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1 style="font-size: 50px">Tomato Pie</h1>
     <img
