add link to home on banana smoothie page

--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -6,6 +6,7 @@
     <title>Banana Smoothie Recipe</title>
 </head>
 <body>
+    <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Banana Smoothie</h1>
 </body>
 </html>
