add link to banana smoothie page on index page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/tomato-pie.html" rel="noreferrer">Tomato Pie Recipe</a>
+    <a href="recipes/banana-smoothie.html" rel="noreferrer">Banana Smoothie Recipe</a>
 </body>
 </html>
