adjust width of smoothie image

--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -8,6 +8,6 @@
 <body>
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Banana Smoothie</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Banana-smoothie.jpg" alt="An image of Banana Smoothie">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Banana-smoothie.jpg" width="300" alt="An image of Banana Smoothie">
 </body>
 </html>
