--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -9,5 +9,8 @@
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Banana Smoothie</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Banana-smoothie.jpg" width="300" alt="An image of Banana Smoothie">
+
+    <h2>Description</h2>
+    <p>Breakfast, lunch, dessert, or snack time, any time's the right time for this delicious banana smoothie. With hundreds of ratings and reviews from our community, this easy banana smoothie recipe with peanut butter is an easy favorite, and it's ready in less than 5 minutes.</p>
 </body>
 </html>
