--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -12,5 +12,14 @@
 
     <h2>Description</h2>
     <p>Breakfast, lunch, dessert, or snack time, any time's the right time for this delicious banana smoothie. With hundreds of ratings and reviews from our community, this easy banana smoothie recipe with peanut butter is an easy favorite, and it's ready in less than 5 minutes.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 bananas, broken into chunks</li>
+        <li>2 cups milk</li>
+        <li>½ cup peanut butter</li>
+        <li>2 tablespoons honey, or to taste</li>
+        <li>2 cups ice cubes</li>
+    </ul>
 </body>
 </html>
