--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Smoothie Recipe</title>
-</head>
-<body>
+  </head>
+  <body>
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Banana Smoothie</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Banana-smoothie.jpg" width="300" alt="An image of Banana Smoothie">
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/9/92/Banana-smoothie.jpg"
+      width="300"
+      alt="An image of Banana Smoothie"
+    />
 
     <h2>Description</h2>
-    <p>Breakfast, lunch, dessert, or snack time, any time's the right time for this delicious banana smoothie. With hundreds of ratings and reviews from our community, this easy banana smoothie recipe with peanut butter is an easy favorite, and it's ready in less than 5 minutes.</p>
+    <p>
+      Breakfast, lunch, dessert, or snack time, any time's the right time for
+      this delicious banana smoothie. With hundreds of ratings and reviews from
+      our community, this easy banana smoothie recipe with peanut butter is an
+      easy favorite, and it's ready in less than 5 minutes.
+    </p>
 
     <h2>Ingredients</h2>
     <ul>
-        <li>2 bananas, broken into chunks</li>
-        <li>2 cups milk</li>
-        <li>½ cup peanut butter</li>
-        <li>2 tablespoons honey, or to taste</li>
-        <li>2 cups ice cubes</li>
+      <li>2 bananas, broken into chunks</li>
+      <li>2 cups milk</li>
+      <li>½ cup peanut butter</li>
+      <li>2 tablespoons honey, or to taste</li>
+      <li>2 cups ice cubes</li>
     </ul>
-</body>
+
+    <h2>Directions</h2>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>
+        Place bananas, milk, peanut butter, honey, and ice cubes in a blender.
+      </li>
+      <li>Blend until smooth, about 30 seconds.</li>
+      <li>Enjoy!</li>
+    </ol>
+  </body>
 </html>
