--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Smoothie Recipe</title>
   </head>
-  <body>
+  <body style="font-size: larger;">
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Banana Smoothie</h1>
     <img
