adjust smoothie page all headings font size

--- a/recipes/banana-smoothie.html
+++ b/recipes/banana-smoothie.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Smoothie Recipe</title>
   </head>
-  <body style="font-size: larger;">
+  <body style="font-size: larger">
     <a href="../index.html" rel="noreferrer">Home</a>
-    <h1>Banana Smoothie</h1>
+    <h1 style="font-size: 50px">Banana Smoothie</h1>
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/9/92/Banana-smoothie.jpg"
       width="300"
       alt="An image of Banana Smoothie"
     />
 
-    <h2>Description</h2>
+    <h2 style="font-size: 35px">Description</h2>
     <p>
       Breakfast, lunch, dessert, or snack time, any time's the right time for
       this delicious banana smoothie. With hundreds of ratings and reviews from
@@ -22,7 +22,7 @@
       easy favorite, and it's ready in less than 5 minutes.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 style="font-size: 35px">Ingredients</h2>
     <ul>
       <li>2 bananas, broken into chunks</li>
       <li>2 cups milk</li>
@@ -31,7 +31,7 @@
       <li>2 cups ice cubes</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 style="font-size: 35px">Directions</h2>
     <ol>
       <li>Gather all ingredients.</li>
       <li>
