--- a/recipes/Salsa.html
+++ b/recipes/Salsa.html
@@ -6,6 +6,7 @@
     <title>Salsa Recipe</title>
 </head>
 <body>
+    <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Salsa</h1>
 </body>
 </html>
