add link on index page to salsa page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/tomato-pie.html" rel="noreferrer">Tomato Pie Recipe</a>
     <a href="recipes/banana-smoothie.html" rel="noreferrer">Banana Smoothie Recipe</a>
+    <a href="recipes/salsa.html" rel="noreferrer">Salsa Recipe</a>
 </body>
 </html>
