add image to salsa page

--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -8,5 +8,6 @@
 <body>
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Salsa</h1>
+    <img src="https://live.staticflickr.com/6170/6235771417_edbccaa8b7_b.jpg" alt="Salsa image">
 </body>
 </html>
