add salsa page description

--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -10,6 +10,7 @@
     <h1>Salsa</h1>
     <img src="https://live.staticflickr.com/6170/6235771417_edbccaa8b7_b.jpg" width="500" alt="Salsa image">
 
-
+    <h2>Description</h2>
+    <p>I make this homemade salsa all the time with ripe tomatoes, onion, jalapeños, and a few other fresh ingredients. It's always very popular. Serve with tortilla chips.</p>
 </body>
 </html>
