--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -12,5 +12,17 @@
 
     <h2>Description</h2>
     <p>I make this homemade salsa all the time with ripe tomatoes, onion, jalapeños, and a few other fresh ingredients. It's always very popular. Serve with tortilla chips.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 large ripe tomatoes, chopped</li>
+        <li>1 onion, chopped</li>
+        <li>1 tomatillo, diced (Optional)</li>
+        <li>½ cup chopped fresh cilantro</li>
+        <li>3 cloves garlic, minced</li>
+        <li>1 tablespoon lime juice</li>
+        <li>salt to taste</li>
+        <li>1 jalapeño pepper, minced</li>
+    </ul>
 </body>
 </html>
