add salsa recipe directions

--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salsa Recipe</title>
-</head>
-<body>
+  </head>
+  <body>
     <a href="../index.html" rel="noreferrer">Home</a>
     <h1>Salsa</h1>
-    <img src="https://live.staticflickr.com/6170/6235771417_edbccaa8b7_b.jpg" width="500" alt="Salsa image">
+    <img
+      src="https://live.staticflickr.com/6170/6235771417_edbccaa8b7_b.jpg"
+      width="500"
+      alt="Salsa image"
+    />
 
     <h2>Description</h2>
-    <p>I make this homemade salsa all the time with ripe tomatoes, onion, jalapeños, and a few other fresh ingredients. It's always very popular. Serve with tortilla chips.</p>
+    <p>
+      I make this homemade salsa all the time with ripe tomatoes, onion,
+      jalapeños, and a few other fresh ingredients. It's always very popular.
+      Serve with tortilla chips.
+    </p>
 
     <h2>Ingredients</h2>
     <ul>
-        <li>4 large ripe tomatoes, chopped</li>
-        <li>1 onion, chopped</li>
-        <li>1 tomatillo, diced (Optional)</li>
-        <li>½ cup chopped fresh cilantro</li>
-        <li>3 cloves garlic, minced</li>
-        <li>1 tablespoon lime juice</li>
-        <li>salt to taste</li>
-        <li>1 jalapeño pepper, minced</li>
+      <li>4 large ripe tomatoes, chopped</li>
+      <li>1 onion, chopped</li>
+      <li>1 tomatillo, diced (Optional)</li>
+      <li>½ cup chopped fresh cilantro</li>
+      <li>3 cloves garlic, minced</li>
+      <li>1 tablespoon lime juice</li>
+      <li>salt to taste</li>
+      <li>1 jalapeño pepper, minced</li>
     </ul>
-</body>
+
+    <h2>Directions</h2>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>
+        Combine tomatoes, onion, tomatillo, cilantro, garlic, lime juice, and
+        salt in a medium-sized mixing bowl. Mix well.
+      </li>
+      <li>
+        Add 1/2 of the jalapeño pepper and taste. If you desire your salsa with
+        more kick, add remaining 1/2 jalapeño.
+      </li>
+      <li>Cover the salsa and chill until ready to serve.</li>
+    </ol>
+  </body>
 </html>
