--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salsa Recipe</title>
   </head>
-  <body style="font-size: larger;">
+  <body style="font-size: larger">
     <a href="../index.html" rel="noreferrer">Home</a>
-    <h1>Salsa</h1>
+    <h1 style="font-size: 50px">Salsa</h1>
     <img
       src="https://live.staticflickr.com/6170/6235771417_edbccaa8b7_b.jpg"
       width="500"
       alt="Salsa image"
     />
 
-    <h2>Description</h2>
+    <h2 style="font-size: 35px">Description</h2>
     <p>
       I make this homemade salsa all the time with ripe tomatoes, onion,
       jalapeños, and a few other fresh ingredients. It's always very popular.
       Serve with tortilla chips.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 style="font-size: 35px">Ingredients</h2>
     <ul>
       <li>4 large ripe tomatoes, chopped</li>
       <li>1 onion, chopped</li>
@@ -33,7 +33,7 @@
       <li>1 jalapeño pepper, minced</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 style="font-size: 35px">Directions</h2>
     <ol>
       <li>Gather all ingredients.</li>
       <li>
