--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/tomato-pie.html" rel="noreferrer">Tomato Pie Recipe</a>
-    <a href="recipes/banana-smoothie.html" rel="noreferrer">Banana Smoothie Recipe</a>
-    <a href="recipes/salsa.html" rel="noreferrer">Salsa Recipe</a>
+    <ol>
+        <li><a href="recipes/tomato-pie.html" rel="noreferrer">Tomato Pie Recipe</a></li>
+        <li><a href="recipes/banana-smoothie.html" rel="noreferrer">Banana Smoothie Recipe</a></li>
+        <li><a href="recipes/salsa.html" rel="noreferrer">Salsa Recipe</a></li>
+    </ol>
 </body>
 </html>
