adjust index page body and heading font size

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
+<body style="font-size: larger;">
+    <h1 style="font-size: 50px;">Odin Recipes</h1>
     <ol>
         <li><a href="recipes/tomato-pie.html" rel="noreferrer">Tomato Pie Recipe</a></li>
         <li><a href="recipes/banana-smoothie.html" rel="noreferrer">Banana Smoothie Recipe</a></li>
